updates index styles

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
-      #root{ height: 100vh;
+      #root{ 
         background: url(/ptbc-bg.png) no-repeat center bottom fixed; 
         background-position: center bottom;
         -webkit-background-size: cover;
