--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
       #root{
+        height: auto;
         background: url(/ptbc-bg.png) no-repeat center bottom fixed; 
         background-position: center bottom;
         -webkit-background-size: cover;
