--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <style>
       #root{
         height: auto;
-        background: url(/ptbc-bg.png) no-repeat center bottom fixed; 
+        background: #282e39 url(/ptbc-bg.png) no-repeat center bottom fixed; 
         background-position: center bottom;
         -webkit-background-size: cover;
         -moz-background-size: cover;
