--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
       #root{
-        height: auto;
-        background: #282e39 url(/ptbc-bg.png) no-repeat center bottom fixed; 
-        background-position: center bottom;
+        color: #5d430e;
+        padding-top: 40px;
+      }
+      html { 
+        background: #282e39 url(images/bg.jpg) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
-        color: #5d430e;
-        padding-top: 40px;
       }
       .MuiButton-containedSecondary {
         color: #5d430e!important;
