--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         padding-top: 40px;
       }
       html { 
-        background: #282e39 url(ptbc-bg.png) no-repeat center center fixed; 
+        background: #282e39 url(/ptbc-bg.png) no-repeat center center fixed; 
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
