updats body css

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
         color: #5d430e;
         padding-top: 40px;
       }
+      body {
+        background-color: transparent;
+      }
       html { 
         background: #282e39 url(/ptbc-bg.png) no-repeat center center fixed; 
         -webkit-background-size: cover;
