updates bg color

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         padding-top: 40px;
       }
       body {
-        background-color: transparent;
+        background-color: transparent!important;
       }
       html { 
         background: #282e39 url(/ptbc-bg.png) no-repeat center center fixed; 
