--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       }
       body {
         background-color: transparent!important;
+        padding-left:40px;
+        padding-right:40px;
       }
       html { 
         background: #282e39 url(/ptbc-bg.png) no-repeat center center fixed; 
